--- a/app/views/master/campaigns/_form.html.haml
+++ b/app/views/master/campaigns/_form.html.haml
@@ -5,6 +5,7 @@
   = f.association :state, include_blank: false
   = f.association :district, include_blank: false
   = f.association :school, include_blank: false
+  = f.association :product, include_blank: false
   = f.input :school_wide, as: :select, include_blank: false
   = f.input :campaignable, as: :select, include_blank: false, collection: Teacher.ordered
   = f.input :campaignable_type, as: :select, include_blank: false, collection: Campaign.campaignable_types
