--- a/app/views/master/products/index.html.haml
+++ b/app/views/master/products/index.html.haml
@@ -10,18 +10,16 @@
 %table.table.table-striped.table-hover.table-condensed
   %thead
     %tr
-      %th= Product.human_attribute_name(:name)
-      %th= Product.human_attribute_name(:description)
-      %th= Product.human_attribute_name(:price)
-      %th= Product.human_attribute_name(:created_at)
-      %th= Product.human_attribute_name(:updated_at)
+      %th= sorty "name", Product.human_attribute_name(:name), true
+      %th= sorty "price_cents", Product.human_attribute_name(:price)
+      %th= sorty "created_at", Product.human_attribute_name(:created_at)
+      %th= sorty "updated_at", Product.human_attribute_name(:updated_at)
       %th
       %th
   %tbody
     - @products.each do |product|
       %tr
         %td= link_to product.name, product
-        %td= product.description
         %td= humanized_money_with_symbol(product.price.dollars, no_cents_if_whole: false)
         %td= l(product.created_at, format: :short)
         %td= l(product.updated_at, format: :short)
