--- a/app/views/master/campaigns/show.html.haml
+++ b/app/views/master/campaigns/show.html.haml
@@ -68,6 +68,21 @@
           %th= Campaign.human_attribute_name(:active)
           %td= @campaign.active? ? "Yes" : "No"
         %tr
+          %th= Campaign.human_attribute_name(:physical_address)
+          %td= @campaign.physical_address
+          %th= Campaign.human_attribute_name(:physical_address_ext)
+          %td= @campaign.physical_address_ext
+        %tr
+          %th= Campaign.human_attribute_name(:physical_city)
+          %td= @campaign.physical_city
+          %th= Campaign.human_attribute_name(:physical_state)
+          %td= @campaign.physical_state
+        %tr
+          %th= Campaign.human_attribute_name(:physical_postal_code)
+          %td= @campaign.physical_postal_code
+          %th
+          %td
+        %tr
           %th= Campaign.human_attribute_name(:created_at)
           %td= l(@campaign.created_at, format: :short)
           %th= Campaign.human_attribute_name(:updated_at)
