--- a/app/views/master/teachers/_form.html.haml
+++ b/app/views/master/teachers/_form.html.haml
@@ -5,7 +5,7 @@
   = f.input :first_name
   = f.input :last_name
   = f.input :email
-  = f.association :school, include_blank: false
+  = f.association :school, include_blank: false, collection: @teacher.new_record? ? School.all : @teacher.school.district.schools.ordered
 
   .form-group
     .col-sm-offset-2.col-sm-10
