--- a/app/views/campaigns/show.html.haml
+++ b/app/views/campaigns/show.html.haml
@@ -5,3 +5,15 @@
 %ul
   %li= link_to 'Reports', reports_campaign_path(@campaign.to_param)
   %li= link_to 'Contributions', contributions_campaign_path(@campaign.to_param)
+
+
+%h5.page-header Contribute
+= simple_form_for :impressions, url: '#', method: :post do |f|
+  = f.error_notification
+
+  = f.input :email, as: :string
+  = f.input :campaign, as: :hidden, input_html: { value: @campaign.slug }
+
+  .form-group
+    .col-sm-offset-2.col-sm-10
+      = f.button :submit, 'Contribute', class: 'btn btn-primary'
