Adds partner iFrame page for injecting indiegogo javascript. #36.

--- a/app/views/campaigns/show.html.haml
+++ b/app/views/campaigns/show.html.haml
@@ -5,6 +5,7 @@
 %ul
   %li= link_to 'Reports', reports_campaign_path(@campaign.to_param)
   %li= link_to 'Contributions', contributions_campaign_path(@campaign.to_param)
+  %li= link_to 'Partner', partner_campaign_path(@campaign.to_param)
 
 
 %h5.page-header Contribute
