--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,6 +15,7 @@
     = favicon_link_tag 'apple-touch-icon-72x72-precomposed.png', rel: 'apple-touch-icon-precomposed', type: 'image/png', sizes: '72x72'
     = favicon_link_tag 'apple-touch-icon-precomposed.png', rel: 'apple-touch-icon-precomposed', type: 'image/png'
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
+    %link{:href => "http://fonts.googleapis.com/css?family=Abel", :rel => "stylesheet", :type => "text/css"}
 
   %body
     %nav.navbar.navbar-default{role: "navigation"}
@@ -24,6 +25,7 @@
             %span.icon-bar
             %span.icon-bar
             %span.icon-bar
+          %a.logo-main{href: "http://golumos.com"}
           %a.navbar-brand{href: root_path}
             = t(".brand")
         = render "layouts/navbar"
@@ -53,7 +55,24 @@
             - if content_for?(:toolbar)
               %div#button-toolbar= yield(:toolbar)
             %div= yield
-      %footer
-        %p
-          &copy;
-          = t(".copyright", year: Date.today.year)
+    %footer
+      .container
+        .pull-right.footer-info
+          .footer-logo
+          .footer-copy
+            &copy;
+            = t(".copyright", year: Date.today.year)
+            = "Lumos Technologies, LLC - All rights reserved"
+        .pull-left.footer-menu
+          .navbar-collapse.collapse
+            %ul.nav.navbar-nav
+              %li 
+                %a{href: "http://golumos.com"} home
+              %li 
+                %a{href: "http://golumos.com/product.php"} product
+              %li 
+                %a{href: "http://golumos.com/how-it-works.php"} how it works
+              %li 
+                %a{href: "http://golumos.com/contact.php"} contact
+            
+              
