--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -30,6 +30,36 @@ background: asset-url('sprite-home.png') 0 0 no-repeat;
 .navbar-brand {
 margin: 10px 10px 0px 45px;
 }
+.c-name {
+	font-size: 24px;
+	color: #333;
+}
+.c-location {
+	color: #B1B3B6;
+}
+.c-location2 {
+	color: #858686;
+	text-transform: uppercase;
+}
+.c-funds {
+	text-align: right;
+	border-bottom: solid 4px #EEEEEE;
+}
+.c-funds-goal {
+	display: inline-block;
+	padding:10px 40px;
+	font-size: 60px;
+	color: #BEC0C2;
+}
+.c-funds-raised {
+	display: inline-block;
+	padding:10px 40px;
+	font-size: 60px;
+	color: #00d6ea;
+}
+.c-graphs {
+	text-align: center;
+}
 @media (min-width: 768px) {
 	.navbar > .container .navbar-brand, .navbar > .container-fluid .navbar-brand {
 		margin-left: 45px;
@@ -40,15 +70,23 @@ body { font-family: 'Abel', sans-serif; font-size: 18px; }
 	padding: 24px;
 	font-size: 20px;
 }
-
+.c-main {
+	padding-bottom: 200px;
+}
 footer {
 	background: #91a0a7;
 	padding: 20px 0 10px 0;
 	margin-top: 60px;
-	position: absolute;
+	position: fixed;
 	width: 100%;
 	bottom: 0px;
 	}
+@media (max-width: 899px) {
+	footer {
+		position: relative;
+		display: block;
+	}
+}
 footer .navbar-nav {
 	margin-top: 0px;
 	}
@@ -95,3 +133,4 @@ background: asset-url('sprite-home.png') no-repeat 0 -72px;
 	font-size: 14px;
     }
 .footer-info { text-align: right; }
+.sub-title { font-size: 30px; }
