--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -30,7 +30,7 @@
             = t(".brand")
         = render "layouts/navbar"
 
-    .container
+    .container.c-main
       .row
         - if content_for?(:sidebar)
           .col-lg-9
