--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,6 +11,7 @@
  * file per style scope.
  *
  *= require bootstrap-datepicker
+ *= require social-share-button
  *= require_tree .
  *= require_self
  */
@@ -82,7 +83,7 @@ body { font-family: 'Abel', sans-serif; font-size: 18px; }
 	border: 0;
 }
 .p-info {
-	margin: 50px auto;	
+	margin: 50px auto;
 	padding: 0 30px;
 	text-align: center;
 }
