Adds lumos styling changes.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -87,6 +87,9 @@ body { font-family: 'Abel', sans-serif; font-size: 18px; }
 	padding: 0 30px;
 	text-align: center;
 }
+.p-info .row {
+	margin-top: 40px;
+}
 .p-info p, .p-info ul {
 	text-align: left;
 	color: #838383;
