--- a/app/views/campaigns/show.html.haml
+++ b/app/views/campaigns/show.html.haml
@@ -33,6 +33,7 @@
   .row
     .col-lg-6
       :plain
+        <img src="https://images.indiegogo.com/file_attachments/674131/files/20140625065839-01-meet-lumos-title.png?1403704719">      
         <p>We understand that today’s classroom presents a unique challenge, with technology ranging from decades old projectors to highly sophisticated tablets and computers. Not to mention a confusing mass of wires and lack of simple connectivity between devices. That in itself presents a dilemma. Incorporating technology separated by decades of innovation can be frustratingly time consuming for even the most tech savvy teacher. Time most teachers just don’t have.</p>
     .col-lg-6
       :plain
